--- a/backend/config/packages/lexik_jwt_authentication.yaml
+++ b/backend/config/packages/lexik_jwt_authentication.yaml
@@ -1,11 +1,31 @@
-# # lexik_jwt_authentication:
+# # # lexik_jwt_authentication:
+# #     secret_key: '%kernel.project_dir%/config/jwt/private.pem'
+# #     public_key: '%kernel.project_dir%/config/jwt/public.pem'
+# #     pass_phrase: '' # Mets ta passphrase si nécessaire
+# #     token_ttl: 3600 # Durée de validité du token en secondes (ex : 1 heure)
+
+# lexik_jwt_authentication:
 #     secret_key: '%kernel.project_dir%/config/jwt/private.pem'
 #     public_key: '%kernel.project_dir%/config/jwt/public.pem'
-#     pass_phrase: '' # Mets ta passphrase si nécessaire
+#     pass_phrase: '' # Mets ici ta passphrase si nécessaire
 #     token_ttl: 3600 # Durée de validité du token en secondes (ex : 1 heure)
+#     user_identity_field: email  # Change "username" par "email"
 
 lexik_jwt_authentication:
     secret_key: '%kernel.project_dir%/config/jwt/private.pem'
     public_key: '%kernel.project_dir%/config/jwt/public.pem'
+    # pass_phrase: '%env(resolve:JWT_PASSPHRASE)%'
     pass_phrase: '' # Mets ici ta passphrase si nécessaire
-    token_ttl: 3600 # Durée de validité du token en secondes (ex : 1 heure)
+    token_ttl: 3600 # Durée de validité du token en secondes
+    user_id_claim: email # Utiliser l'email comme identifiant utilisateur
+    token_extractors:
+        authorization_header:
+            enabled: true
+            prefix: Bearer
+            name: Authorization
+        query_parameter:
+            enabled: false
+            name: token
+        cookie:
+            enabled: false
+            name: BEARER
